# zusi-rs

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple_client.rs  tcp_client.rs
protocol/: Cargo.toml
protocol-derive/: Cargo.toml
protocol-derive/src/: de.rs  lib.rs  ser.rs
protocol/src/: de.rs  errors.rs  lib.rs  parse_attrs.rs  ser.rs
src/: error.rs  fahrpult.rs  integration_test.rs  lib.rs  ser.rs  verbindungsaufbau.rs
zusi/: CHANGELOG.md  Cargo.toml
zusi-async/: Cargo.toml
zusi-async/examples/: fahrpult.rs
zusi-async/src/: lib.rs
zusi-async/src/dto/: mod.rs
zusi-async/src/parser/: attribute.rs  header.rs  mod.rs  node.rs
zusi-fahrpult/: CHANGELOG.md  Cargo.toml
zusi-fahrpult/examples/: tcp_client.rs
zusi-fahrpult/src/: fahrpult.rs  integration_test.rs  lib.rs  verbindungsaufbau.rs
zusi-fahrpult/tests/: integration_test.rs
zusi-protocol/: CHANGELOG.md  Cargo.toml
zusi-protocol-derive/: CHANGELOG.md  Cargo.toml
zusi-protocol-derive/src/: de.rs  lib.rs  ser.rs
zusi-protocol/src/: codec.rs  de.rs  de_async.rs  lib.rs  parser.rs  ser.rs  ser_async.rs
zusi-protocol/src/de/: mod.rs  num.rs
zusi-protocol/src/parser/: mod.rs
zusi-protocol/src/ser/: mod.rs  num.rs
zusi-protocol/src/serde/: error.rs  mod.rs  ser.rs
zusi-tcp/: Cargo.toml
zusi-tcp/src/: debug.rs  lib.rs  node.rs  protocol.rs  tcp.rs
zusi/benches/: codec.rs
zusi/examples/: fahrpult-async.rs  fahrpult-sync.rs  fahrpult_async.rs  fahrpult_sync.rs
zusi/src/: lib.rs  verbindungsaufbau.rs
zusi/src/client/: async_codec.rs  codec.rs  mod.rs
zusi/src/message/: mod.rs
zusi/tests/: async.rs  codec.rs  integration.rs  serde.rs  sync.rs
zusi/tests/common/: mod.rs
