[package]
name = "zusi"
version = "0.1.0"
authors = ["Jannis Schaefer <j.schaefer@estwx.de>"]
edition = "2018"

[workspace]
members = [
    "protocol",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
thiserror = "1"
num-traits = "0.2.12"
zusi-protocol = { path = "./protocol" }
