[package]
name = "zusi"
version = "0.1.0"
authors = ["Jannis Schaefer <j.schaefer@estwx.de>"]
edition = "2018"

[workspace]
members = [
    "protocol",
    "protocol-derive",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
zusi-protocol-derive = { path = "protocol-derive" }
zusi-protocol = { path = "protocol" }
