[package]
name = "zusi"
description = "TCP-Client for Zusi 3 Hobby `Fahrpult`-Mode."
version = "0.1.0"
authors = ["Jannis Schaefer <j.schaefer@estwx.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[workspace]
members = [
    "protocol",
    "protocol-derive",
]

[lib]

[dependencies]
thiserror = "1.0"
zusi-protocol-derive = { path = "protocol-derive" }
zusi-protocol = { path = "protocol" }
