[package]
name = "zusi-protocol-derive"
version = "0.1.0"
authors = ["Jannis Schaefer <j.schaefer@estwx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
thiserror = "1"
syn = { version = "1.0", features = ["default", "derive"]}
quote = "1.0"
darling = "0.10.2"
proc-macro2 = "1.0"
