[package]
name = "zusi-fahrpult"
description = "TCP-Client for Zusi 3 Hobby `Fahrpult`-Mode."
version = "0.1.0"
authors = ["Jannis Schaefer <j.schaefer@estwx.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/zusi/zusi-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
zusi-protocol-derive = { path = "../zusi-protocol-derive" }
zusi-protocol = { path = "../zusi-protocol" }
