[package]
name = "zusi-fahrpult"
description = "TCP-Client for Zusi 3 Hobby `Fahrpult`-Mode."
version = "0.1.4"
authors = ["Jannis Schaefer <jannis@schaefer.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/zusi/zusi-rs"
readme = "../README.md"

[dependencies]
thiserror = "1"
zusi-protocol = { path = "../zusi-protocol", version = "0.2.1" }
