[package]
name = "zusi-protocol-derive"
description = "Contains derivable serialization and deserialization logic for the Zusi 3 TCP-Protocol"
version = "0.1.0"
authors = ["Jannis Schaefer <j.schaefer@estwx.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/zusi/zusi-rs"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["default", "derive"] }
quote = "1.0"
darling = "0.10"
proc-macro2 = "1.0"
