[package]
name = "zusi-protocol-derive"
description = "Contains derivable serialization and deserialization logic for the Zusi 3 TCP-Protocol"
version = "0.1.2"
authors = ["Jannis Schaefer <jannis@schaefer.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/zusi/zusi-rs"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.60"
quote = "1.0"
darling = "0.20"
proc-macro2 = "1.0"
