[package]
name = "zusi-protocol"
description = "Contains serialization and deserialization logic for the Zusi 3 TCP-Protocol"
version = "0.1.0"
authors = ["Jannis Schaefer <j.schaefer@estwx.de>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/zusi/zusi-rs"
readme = "../README.md"

[dependencies]
thiserror = "1.0"
log = "0.4"
nom = "7"

tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = {version = "1", optional = true }

[features]
default = [ "async" ]
async = [ "bytes", "tokio-util" ]
