[package]
name = "zusi-protocol"
description = "Contains serialization and deserialization logic for the Zusi 3 TCP-Protocol"
version = "0.2.0"
authors = ["Jannis Schaefer <jannis@schaefer.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/zusi/zusi-rs"
readme = "../README.md"

[dependencies]
thiserror = "1"
log = "0.4"
zusi-protocol-derive = { path = "../zusi-protocol-derive", version = "0.1.1", optional = true }
nom = { version = "7", optional = true }
either = { version = "1.10", optional = true }

[features]
default = ["derive"]
parser = ["dep:nom", "dep:either"]
derive = ["dep:zusi-protocol-derive"]
